[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bankguard-rl"
version = "1.0.0"
description = "Bank Fraud Investigation RL Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.4",
    "openai>=1.14.0",
    "httpx>=0.27.0",
    "setuptools>=68.0",
]

[project.scripts]
server = "app:main"

[tool.setuptools.packages.find]
where = ["."]